<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Border -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FFE53935" />

    <!-- BUTTONS -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <!-- Button new game-->
        <ImageButton
            android:id="@+id/btn_new_game"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/new_game"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_new" />

        <!-- Make space between buttons -->
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <!-- Button Add Score -->
        <ImageButton
            android:id="@+id/btn_add_score"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/add_score_to_current_game"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_add" />

        <!-- Make space between buttons -->
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <!-- Button set win condition -->
        <ImageButton
            android:id="@+id/btn_win_condition"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/win_condition"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_goal" />

        <!-- Make space between buttons -->
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <!-- Button restart game -->
        <ImageButton
            android:id="@+id/btn_restart"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/restart"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_restart" />

        <!-- Make space between buttons -->
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <!-- Button About us -->
        <ImageButton
            android:id="@+id/btn_about"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/about_us"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_about" />

        <!-- Make space between buttons
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" /> -->

        <!-- Button Exit app disabled
        <ImageButton
            android:id="@+id/btn_exit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/exit_app"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_exit" /> -->


    </LinearLayout>

    <!-- Border -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#FFE53935" />

    <!-- title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/games"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_first_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/first_to"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- GAME INFO -->
    <LinearLayout
        android:id="@+id/game_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <!-- Team A -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/games_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team_a"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/current_game_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="36sp" />

        </LinearLayout>

        <!-- Border -->
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#E53935" />

        <!-- Team B -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/games_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/team_b"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/current_game_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="36sp" />

        </LinearLayout>

    </LinearLayout>

    <!-- Border -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FFE53935" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_games"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
